# tabu-2.0

./: AUTHORS  Makefile.am  NEWS  configure.ac  tabu-backend.c  tabu-backend.h  tabu-controls.c  tabu-controls.h  tabu-playlist.c  tabu-playlist.h  tabu-window.c  tabu-window.h  tabu.c  tabu.desktop  tabu.h
